k8s/dns/pihole-service.yml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-service
  namespace: dns
spec:
  selector:
    app: pihole-app
  type: LoadBalancer
  ports:
  - name: pihole-dns-upd
    protocol: UDP
    port: 53
    targetPort: 53
  - name: pihole-dns-tcp
    protocol: TCP
    port: 53
    targetPort: 53
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: pihole-frontend-service
  namespace: dns
spec:
  selector:
    app: pihole-app
  ports:
  - name: pihole-frontend
    protocol: TCP
    port: 80
