k8s/dns/dns-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dns-ingress
  namespace: dns
  annotations:
    nginx.org/server-snippets: |
      ssl_verify_client on;
      ssl_client_certificate /etc/nginx/secrets/dns-home-ca-key-pair;
      ssl_verify_depth 1;
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "pihole.minikube.home.lab"
    secretName: lab-nginx-certificate
  - hosts:
    - "pihole.aramismatos1.com"
    secretName: nginx-certificate-secret
  - secretName: home-ca-key-pair
  rules:
  - host: "pihole.minikube.home.lab"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole-frontend-service
            port:
              number: 80
